Criado através do Colaboratory

--- a/MINDD_PL02.ipynb
+++ b/MINDD_PL02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNu6ul6Pc6w1Nb2vCLwkz3y",
+      "authorship_tag": "ABX9TyMqMYYWhegmGtp5O10+mwB5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 591
+          "height": 0
         },
         "id": "vWDJ9dBtqM6L",
-        "outputId": "71026045-15d5-4fe2-c9ee-9ffacd848988"
+        "outputId": "b03dd8c2-974d-42df-df3d-59c3c098350e"
       },
       "outputs": [
         {
@@ -81,7 +81,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9b1165bb-d082-41bd-a5f5-d6cb65513fe4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-db3e0f8c-169e-4946-999f-665359bd84f1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -220,7 +220,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b1165bb-d082-41bd-a5f5-d6cb65513fe4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-db3e0f8c-169e-4946-999f-665359bd84f1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -272,12 +272,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9b1165bb-d082-41bd-a5f5-d6cb65513fe4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-db3e0f8c-169e-4946-999f-665359bd84f1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9b1165bb-d082-41bd-a5f5-d6cb65513fe4');\n",
+              "        const element = document.querySelector('#df-db3e0f8c-169e-4946-999f-665359bd84f1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -297,8 +297,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-338e3f6c-cc85-4b19-b847-181adf8483b0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-338e3f6c-cc85-4b19-b847-181adf8483b0')\"\n",
+              "<div id=\"df-9d5a69da-5ad2-4a00-b52d-77cd6ec8c23a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9d5a69da-5ad2-4a00-b52d-77cd6ec8c23a')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -417,7 +417,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-338e3f6c-cc85-4b19-b847-181adf8483b0 button');\n",
+              "        document.querySelector('#df-9d5a69da-5ad2-4a00-b52d-77cd6ec8c23a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -428,7 +428,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ],
       "source": [
@@ -461,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y3GLPPiBsYaz",
-        "outputId": "31a87b30-eb93-4af1-a388-6869487d6767"
+        "outputId": "d6f48b1f-ff7d-444d-d321-201a2acbecb2"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,9 +488,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hpCok46AvEE3",
-        "outputId": "50d9fdf2-6f3b-446d-fb88-e5dc422d5b72"
+        "outputId": "e0ce17fb-b371-48f0-99d5-c65c9ffeb48a"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,15 +527,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "spe_Rxxd7ocR",
-        "outputId": "bf6d2ea6-b3f9-4f76-c3b6-807b6e59ed64"
+        "outputId": "8a496dc4-75f1-4cd5-88a1-5e44dbab8132"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-5-3ba3b6eab50d>:8: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+            "<ipython-input-4-3ba3b6eab50d>:8: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
             "  df['PurchDate'] = pd.to_datetime(df['PurchDate'])\n"
           ]
         },
@@ -563,7 +563,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -578,9 +578,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KOS5GxvF7uzK",
-        "outputId": "2a7d8be1-baaf-4e36-f6e6-e21991c64e53"
+        "outputId": "bcf392db-1a5a-4516-cd62-857041e9d994"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,7 +606,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -652,7 +652,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,13 +699,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "DWU9ycNUApaO",
         "outputId": "c0c055fb-8249-439f-e6c3-a5a2dd75ebb9"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -755,7 +754,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,13 +801,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "5f00ab10-3f01-4600-8cbc-34d258075d11",
         "id": "8679JY11JgDr"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -847,11 +845,10 @@
         "id": "faBgpQnhCTNo",
         "outputId": "c13ab486-a23d-4796-eb17-9d8c0b0d2273",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -878,11 +875,10 @@
         "id": "U0UzJYEBC5-Y",
         "outputId": "ca4c0e3e-4f86-4968-ba51-0e5a0b2a8ebf",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -902,7 +898,7 @@
       "metadata": {
         "id": "qN_nTds7DQIU"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -939,7 +935,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +967,7 @@
       "metadata": {
         "id": "M7MIwlHGMJX1"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -990,7 +986,7 @@
         },
         "outputId": "41d2cab0-ab96-4f2f-b811-5b1cc66c542a"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,11 +1015,10 @@
         "id": "MeZqGttqEPgi",
         "outputId": "21fc769b-cc15-4363-c678-322296c9b892",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1051,11 +1046,10 @@
         "id": "mBzMoSemE7Ds",
         "outputId": "a86576fe-03bb-4a4e-ad77-fa3ffb2787ac",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1084,11 +1078,10 @@
         "id": "MaRC6mHNFsaa",
         "outputId": "deed4223-b8f1-4c89-d3d4-03248b14c2f7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1134,7 +1127,7 @@
         "id": "Z35eZXUWOJ80",
         "outputId": "13403fbd-8a4f-42f9-d30f-9df695d31249"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1179,7 +1172,7 @@
         "id": "iqmzU1qbRqHs",
         "outputId": "9f81aad8-e8dc-465e-cba9-3bcc38c720c6"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1212,7 +1205,7 @@
         "id": "le9nG5RgRFCo",
         "outputId": "f4353495-05e1-4c61-d270-c167de61ae4a"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1247,7 +1240,7 @@
         "id": "jaLPDfDUSJgS",
         "outputId": "950a774f-7853-4dce-f015-cbce736e3108"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1281,7 +1274,7 @@
         "id": "W0u2cxqMT_FB",
         "outputId": "b07cf073-3ad5-489d-c10e-02be9cd1bd49"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,9 +1317,9 @@
         "# Number of Customers who bought 1,2,3,4 DVDs\n",
         "\n",
         "# Count the number of times each customer appears in the DataFrame\n",
-        "customer_counts = df['Username'].value_counts().reset_index(name='Number of')\n",
-        "customer_counts.columns = ['Username', 'Number of']\n",
-        "counts = customer_counts['Number of'].value_counts().sort_index()\n",
+        "customer_counts = df['Username'].value_counts().reset_index(name='Number of') # return username and number of bought\n",
+        "#customer_counts.columns = ['Username', 'Number of']\n",
+        "counts = customer_counts['Number of'].value_counts().sort_index() # do the same but return the number of cliente bought each number.\n",
         "print(customer_counts)\n",
         "print(counts)"
       ],
@@ -1335,15 +1328,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b0NSqe-lU8mX",
-        "outputId": "1143246c-6644-4fe9-abb3-89a218dee246"
+        "outputId": "cf24dd9c-658f-4f1f-ef38-70fa3b522a90"
       },
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "         Username  Number of\n",
+            "            index  Number of\n",
             "0    user_3646485          4\n",
             "1     user_346403          4\n",
             "2    user_3066049          3\n",
