Criado através do Colaboratory

--- a/MINDD_PL02.ipynb
+++ b/MINDD_PL02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqMYYWhegmGtp5O10+mwB5",
+      "authorship_tag": "ABX9TyOtRSK8EPOggVKe+aW6sepj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 590
         },
         "id": "vWDJ9dBtqM6L",
         "outputId": "b03dd8c2-974d-42df-df3d-59c3c098350e"
@@ -1143,15 +1143,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "W4q1Rh4HOfOJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## 3. Check:"
@@ -1360,17 +1351,113 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "# h. Create a summary table with Style/Uni_Vnd/Min_Prc/Max_Prk/Avg_Prck/DesvPad_Prd\n",
+        "\n",
+        "sold_by_style = df['Style'].value_counts()\n",
+        "min_price = df['Price'].min()\n",
+        "max_price = df['Price'].max()\n",
+        "avg_price = df['Price'].mean().round(2)\n",
+        "print(df.columns)\n",
+        "print(sold_by_style)\n",
+        "print(\"Min price:\" , min_price)\n",
+        "print(\"Max price:\" , max_price)\n",
+        "print(\"Avg price:\" , avg_price)"
+      ],
       "metadata": {
-        "id": "CCts84KAwfqv"
-      }
+        "id": "UE3JnP2uv4f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "752eee88-f70b-4730-f06b-e8b48e934781"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['Username', 'TitleCli', 'Name', 'Address', 'Country', 'Gender', 'Age',\n",
+            "       'Favourites', 'Order_ID', 'Product_ID', 'Style', 'Film_Title', 'Price',\n",
+            "       'PurchTime', 'PurchDate', 'Buy_for'],\n",
+            "      dtype='object')\n",
+            "Comedy       214\n",
+            "Children     151\n",
+            "Drama         94\n",
+            "Sci-Fi        92\n",
+            "Western       63\n",
+            "Horror        50\n",
+            "Adventure     47\n",
+            "Musical       28\n",
+            "Name: Style, dtype: int64\n",
+            "Min price: 5.99\n",
+            "Max price: 15.99\n",
+            "Avg price: 8.74\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Suponhamos que 'df' seja o seu DataFrame original\n",
+        "\n",
+        "# Agrupe os dados por 'Style' e calcule as estatísticas\n",
+        "summary_table = df.groupby('Style').agg({\n",
+        "    'Style': 'count',          # Contagem de vendas por estilo\n",
+        "    'Price': ['min', 'max', 'mean', 'std']  # Preço mínimo, máximo, médio e desvio padrão\n",
+        "})\n",
+        "\n",
+        "# Renomeie as colunas do resumo\n",
+        "summary_table.columns = ['Uni_Vnd', 'Min_Prc', 'Max_Prk', 'Avg_Prck', 'DesvPad_Prd']\n",
+        "\n",
+        "# Arredonde os valores\n",
+        "summary_table['Avg_Prck'] = summary_table['Avg_Prck'].round(2)\n",
+        "summary_table['DesvPad_Prd'] = summary_table['DesvPad_Prd'].round(2)\n",
+        "\n",
+        "# Reset do índice para ter 'Style' como uma coluna em vez de um índice\n",
+        "summary_table.reset_index(inplace=True)\n",
+        "\n",
+        "# Renomeie a coluna 'Style' para 'Estilo' (caso deseje)\n",
+        "summary_table.rename(columns={'Style': 'Estilo'}, inplace=True)\n",
+        "\n",
+        "# Exiba a tabela de resumo\n",
+        "print(summary_table)\n"
+      ],
+      "metadata": {
+        "id": "m7mFyy_n0CgY",
+        "outputId": "a7b447f3-6cd2-4a9f-c6f7-870771e7e2ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "      Estilo  Uni_Vnd  Min_Prc  Max_Prk  Avg_Prck  DesvPad_Prd\n",
+            "0  Adventure       47     7.99    12.99     11.61         1.95\n",
+            "1  Children       151     5.99     5.99      5.99         0.00\n",
+            "2     Comedy      214     5.99    15.99     10.03         3.33\n",
+            "3      Drama       94     7.99     7.99      7.99         0.00\n",
+            "4     Horror       50     5.99     8.99      7.31         1.46\n",
+            "5    Musical       28     5.99     5.99      5.99         0.00\n",
+            "6     Sci-Fi       92     5.99    15.99     10.69         2.31\n",
+            "7    Western       63     5.99    12.99      9.48         2.42\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "UE3JnP2uv4f3"
+        "id": "inCvjSIa4thu"
       },
       "execution_count": null,
       "outputs": []
