--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -1387,9 +1387,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# matriz de correlação\n",
+        "correlation_matrix = selected_variables.corr()\n",
+        "\n",
+        "# valores próprios\n",
+        "eigenvalues = np.linalg.eigvals(correlation_matrix)\n",
+        "\n",
+        "# Examinar os valores próprios\n",
+        "print(\"Eigenvalues:\")\n",
+        "print(eigenvalues)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yi3qM87YZn6r",
+        "outputId": "8723854d-953f-4e15-c540-5e63be72a526"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvalues:\n",
+            "[1.04092074 0.98183245 0.98600066 0.99150041 0.99658361 1.00316213]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-23-d21ab694b8f2>:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+            "  correlation_matrix = selected_variables.corr()\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "These results suggest that there is no significant multicollinearity between the variables selected by the ANOVA and Chi-square test. Therefore, there is no impediment to proceed with the construction of predictive models using these variables."
+        "These results suggest that there is no significant multicollinearity between the variables selected by the ANOVA and Chi-square and eigenvalues test. Therefore, there is no impediment to proceed with the construction of predictive models using these variables."
       ],
       "metadata": {
         "id": "G1cV-wjPZnB1"
@@ -1399,7 +1439,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Yi3qM87YZn6r"
+        "id": "JAGa3R18czSk"
       },
       "execution_count": null,
       "outputs": []
