--- a/Project_v3.ipynb
+++ b/Project_v3.ipynb
@@ -35,7 +35,7 @@
       ],
       "metadata": {
         "id": "mVWD7Vj_1G9X",
-        "outputId": "82333c7f-8759-479a-fcb4-4aceb228e1a0",
+        "outputId": "9b16b47c-58c2-4bf2-a2e5-92c518aa061a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -77,7 +77,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4BbMwvBELL6m",
-        "outputId": "41b5bd3b-bcf8-40e9-cc85-5f7dad563bb7"
+        "outputId": "743d5bb2-fda5-40a2-92e0-6e9e5fccbd8f"
       },
       "execution_count": 2,
       "outputs": [
@@ -87,7 +87,7 @@
           "text": [
             "Collecting sweetviz\n",
             "  Downloading sweetviz-2.3.0-py3-none-any.whl (15.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.1/15.1 MB\u001b[0m \u001b[31m50.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.1/15.1 MB\u001b[0m \u001b[31m24.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: pandas!=1.0.0,!=1.0.1,!=1.0.2,>=0.25.3 in /usr/local/lib/python3.10/dist-packages (from sweetviz) (1.5.3)\n",
             "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.10/dist-packages (from sweetviz) (1.23.5)\n",
             "Requirement already satisfied: matplotlib>=3.1.3 in /usr/local/lib/python3.10/dist-packages (from sweetviz) (3.7.1)\n",
@@ -212,7 +212,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H4DuErdH-m6u",
-        "outputId": "287d316b-18fd-4b00-af87-7b5f0bfac123"
+        "outputId": "54550bfb-47fb-421a-c089-8e84fee2e9de"
       },
       "outputs": [
         {
@@ -250,7 +250,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JaBxtNEg_-cb",
-        "outputId": "b07604c8-c090-4df8-9e5b-1003658c5372"
+        "outputId": "a325288b-0965-4203-81fb-0b47ebf922cd"
       },
       "outputs": [
         {
@@ -287,7 +287,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nIYv_owtAC1b",
-        "outputId": "55c1567e-97e6-46f4-9437-b653309e225f"
+        "outputId": "8f00f4a3-664b-4a70-c415-c67daa64557e"
       },
       "outputs": [
         {
@@ -361,7 +361,7 @@
           "height": 0
         },
         "id": "9TDmCmuGA-Vh",
-        "outputId": "77009495-26b5-4e21-f177-c1d7e3909eed"
+        "outputId": "005e3a85-ebd9-46e0-ff48-510aae57ff98"
       },
       "outputs": [
         {
@@ -450,7 +450,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-74a80629-22ae-43bc-9d28-5c750153a84d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-992bd73e-1993-4263-a0c0-382fe6786909\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -764,7 +764,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-74a80629-22ae-43bc-9d28-5c750153a84d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-992bd73e-1993-4263-a0c0-382fe6786909')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -816,12 +816,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-74a80629-22ae-43bc-9d28-5c750153a84d button.colab-df-convert');\n",
+              "        document.querySelector('#df-992bd73e-1993-4263-a0c0-382fe6786909 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-74a80629-22ae-43bc-9d28-5c750153a84d');\n",
+              "        const element = document.querySelector('#df-992bd73e-1993-4263-a0c0-382fe6786909');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -841,8 +841,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-bf1551ed-34ff-4cbf-b49b-e4aa92b7b9bd\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bf1551ed-34ff-4cbf-b49b-e4aa92b7b9bd')\"\n",
+              "<div id=\"df-fcc34c61-a7c1-40de-8705-8962c6411b23\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fcc34c61-a7c1-40de-8705-8962c6411b23')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -961,7 +961,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-bf1551ed-34ff-4cbf-b49b-e4aa92b7b9bd button');\n",
+              "        document.querySelector('#df-fcc34c61-a7c1-40de-8705-8962c6411b23 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -996,7 +996,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WbAEAG0HVUJ6",
-        "outputId": "9689f0cf-5fce-4aad-d45f-16360b2b0650"
+        "outputId": "01608c75-531f-49c8-e8d4-e28f32ec0967"
       },
       "outputs": [
         {
@@ -1071,7 +1071,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Zp6abrFJasH",
-        "outputId": "59937292-7fbe-4845-82ca-35a56def102e"
+        "outputId": "10c59635-9428-47ad-c7f1-240f19a7c20f"
       },
       "execution_count": 10,
       "outputs": [
@@ -1103,7 +1103,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-CnLpLGvIXh7",
-        "outputId": "974a015f-164f-4702-b9e9-aa5f3db788eb"
+        "outputId": "9b0ded0b-c9f2-4b01-be90-c4c3600cd550"
       },
       "execution_count": 11,
       "outputs": [
@@ -1317,7 +1317,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gHtInt9NVPIX",
-        "outputId": "60ec28b0-ab08-4e0b-bd4c-aa8e707f863f"
+        "outputId": "27eb7ae9-9380-40b9-c20a-f4e45a2dbb7f"
       },
       "outputs": [
         {
@@ -1418,13 +1418,12 @@
     {
       "cell_type": "code",
       "source": [
-        "analyze_report = sv.analyze(df)\n",
+        "'''analyze_report = sv.analyze(df)\n",
         "analyze_report.show_html('analyze.html', open_browser=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0,
           "referenced_widgets": [
             "f34262d9c7814241abf775bf2ad85b4f",
             "3f41f8f282504d16b56e5f5c6cd58f49",
@@ -1442,7 +1441,7 @@
         "id": "dfwIRJcKLeaI",
         "outputId": "9a1fb586-268c-4063-efb3-9d0055cb31ad"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1474,13 +1473,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "PEAURHuDNzAn",
         "outputId": "db8c51ae-51ef-4b45-fffd-193938cf870c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -20933,11 +20931,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "JYr1xr7zFLCN",
         "outputId": "2daaedc2-107a-4ba0-ba63-1c40d0a4a486"
@@ -21063,13 +21060,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jyCEQkZdlQYK",
-        "outputId": "5a32129e-f2d3-4c11-f4d6-0e12e9259068"
+        "outputId": "37daa293-e642-43ed-82a6-1e7b070d2655"
       },
       "outputs": [
         {
@@ -21125,13 +21122,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "O6LRJ__Flue4",
-        "outputId": "5d560cbe-4a3f-4813-cb76-f1598f621929"
+        "outputId": "f7993ada-d082-4613-ee34-703bd202f48e"
       },
       "outputs": [
         {
@@ -21190,7 +21187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -21247,7 +21244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -21289,10 +21286,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Models"
+        "##### Data prepare"
       ],
       "metadata": {
-        "id": "Q8DLgxxHRfvN"
+        "id": "CKwYgqEJeTJ9"
       }
     },
     {
@@ -21329,8 +21326,115 @@
       "metadata": {
         "id": "N8AqDvH-GwJT"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Contagem dos valores únicos\n",
+        "counts = df['Loan Status'].value_counts()\n",
+        "\n",
+        "# Proporção em números\n",
+        "count_0 = counts.get(0, 0)\n",
+        "count_1 = counts.get(1, 0)\n",
+        "\n",
+        "# Proporção em porcentagem\n",
+        "total_samples = len(df)\n",
+        "percentage_0 = (count_0 / total_samples) * 100\n",
+        "percentage_1 = (count_1 / total_samples) * 100\n",
+        "\n",
+        "# Exibindo os resultados\n",
+        "print(f'Número de 0s: {count_0} ({percentage_0:.2f}%)')\n",
+        "print(f'Número de 1s: {count_1} ({percentage_1:.2f}%)')\n"
+      ],
+      "metadata": {
+        "id": "8qF8NXKYezqD",
+        "outputId": "06df3a68-df38-485e-ebc8-5c782d1e1b4f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Número de 0s: 61222 (90.75%)\n",
+            "Número de 1s: 6241 (9.25%)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Muito desbalanceado!"
+      ],
+      "metadata": {
+        "id": "ImwfF1Yne4T5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Models"
+      ],
+      "metadata": {
+        "id": "Q8DLgxxHRfvN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ajustar probabilidades à priori\n",
+        "prior_probabilities = [0.5, 0.5]\n",
+        "classifier = GaussianNB(priors=prior_probabilities)\n",
+        "\n",
+        "# Criar pipeline com pré-processamento e modelo\n",
+        "pipeline = Pipeline([\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('classifier', classifier)\n",
+        "])\n",
+        "\n",
+        "# Treinar o modelo\n",
+        "pipeline.fit(X_train, y_train)\n",
+        "\n",
+        "# Fazer previsões\n",
+        "y_pred = pipeline.predict(X_test)\n",
+        "\n",
+        "# Avaliar o desempenho\n",
+        "print(\"Matriz de Confusão:\")\n",
+        "print(confusion_matrix(y_test, y_pred))\n",
+        "print(\"Acurácia:\", accuracy_score(y_test, y_pred))\n",
+        "print(\"Precision:\", precision_score(y_test, y_pred))\n",
+        "print(\"Recall:\", recall_score(y_test, y_pred))\n",
+        "print(\"F1 Score:\", f1_score(y_test, y_pred))\n"
+      ],
+      "metadata": {
+        "id": "tjLjDe5-EHB3",
+        "outputId": "94e3a952-b342-4e24-aa54-da6d75778253",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Matriz de Confusão:\n",
+            "[[9819 2456]\n",
+            " [ 935  283]]\n",
+            "Acurácia: 0.7486845030756689\n",
+            "Precision: 0.10332238043081417\n",
+            "Recall: 0.23234811165845648\n",
+            "F1 Score: 0.14303765478898156\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -21347,7 +21451,7 @@
         "id": "gEBnAxdVbzzg",
         "outputId": "60a27687-f311-4e62-daba-8ff529017a4c"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -21764,57 +21868,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ajustar probabilidades à priori\n",
-        "prior_probabilities = [0.5, 0.5]  # Substitua isso pelas suas probabilidades reais\n",
-        "classifier = GaussianNB(priors=prior_probabilities)\n",
-        "\n",
-        "# Criar pipeline com pré-processamento e modelo\n",
-        "pipeline = Pipeline([\n",
-        "    ('preprocessor', preprocessor),\n",
-        "    ('classifier', classifier)\n",
-        "])\n",
-        "\n",
-        "# Treinar o modelo\n",
-        "pipeline.fit(X_train, y_train)\n",
-        "\n",
-        "# Fazer previsões\n",
-        "y_pred = pipeline.predict(X_test)\n",
-        "\n",
-        "# Avaliar o desempenho\n",
-        "print(\"Matriz de Confusão:\")\n",
-        "print(confusion_matrix(y_test, y_pred))\n",
-        "print(\"Acurácia:\", accuracy_score(y_test, y_pred))\n",
-        "print(\"Precision:\", precision_score(y_test, y_pred))\n",
-        "print(\"Recall:\", recall_score(y_test, y_pred))\n",
-        "print(\"F1 Score:\", f1_score(y_test, y_pred))\n"
-      ],
-      "metadata": {
-        "id": "tjLjDe5-EHB3",
-        "outputId": "94e3a952-b342-4e24-aa54-da6d75778253",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Matriz de Confusão:\n",
-            "[[9819 2456]\n",
-            " [ 935  283]]\n",
-            "Acurácia: 0.7486845030756689\n",
-            "Precision: 0.10332238043081417\n",
-            "Recall: 0.23234811165845648\n",
-            "F1 Score: 0.14303765478898156\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.pipeline import make_pipeline\n",
         "\n",
@@ -21843,7 +21896,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -21911,7 +21964,7 @@
         "id": "Upfs4j0OU7-F",
         "outputId": "160b3ec0-1eb8-4171-b95c-0d4073140f5d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -21940,7 +21993,7 @@
       "metadata": {
         "id": "hrge5tsLUWec"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -21963,7 +22016,7 @@
         "id": "wXGdLCe4YIyt",
         "outputId": "e4900ea6-363e-4260-a064-5211c213b77b"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -22031,7 +22084,7 @@
         "id": "yuqCJsECYeF_",
         "outputId": "16a86d4a-a3dc-4bbd-c063-64013e0e71c9"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -22059,7 +22112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "dUdFnSgOiXKw",
         "colab": {
@@ -22107,7 +22160,7 @@
       "metadata": {
         "id": "ODNeSnI2fgB5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -22133,7 +22186,7 @@
         "id": "-v2JYbRiTzFZ",
         "outputId": "e2c5e12a-a8cb-4665-b515-5eb7b41496f3"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -22210,7 +22263,7 @@
         "id": "K6D64MvFSfmM",
         "outputId": "8918d47d-5524-42ab-c161-c8a92470eb18"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -22327,7 +22380,7 @@
         "id": "z3y5qyvyJAXz",
         "outputId": "9daa9307-53b2-42f6-dca9-187fa1afa684"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
